--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link js-scroll-trigger" href="#signup">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="project.html">Project</a>
+                        <a class="nav-link js-scroll-trigger" href="http://141.223.239.241:3000">Project</a>
                     </li>
                 </ul>
             </div>
