--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ All the steps will be regulated by the system. We truly believe that we have str
 
                         </p>
 
-                            <a href="./[FLY2U]Business_document.pdf target="_blank" class="btn btn-primary js-scroll-trigger">Business Document</a>
+                            <a href="./[FLY2U]Business_document.pdf" target="_blank" class="btn btn-primary js-scroll-trigger">Business Document</a>
                             <a href="./[FLY2U]Presentation_for_readers.pdf" target="_blank" class="btn btn-primary js-scroll-trigger">PRESENTATION SLIDES</a><br/><br/>
                     </div>
                 </div>
